Fix wrongly assigned styling from persons list to other tables

--- a/global/site-files/stylesheet.css
+++ b/global/site-files/stylesheet.css
@@ -135,11 +135,11 @@ div.dataTables_wrapper {
   border: 1px solid #161616;
 }
 
-th:nth-child(2) {
+#personsTable th:nth-child(2) {
   max-width: 150px;
 }
 
-td:nth-child(2) {
+#personsTable td:nth-child(2) {
   max-width: 150px;
   text-align: center;
 }
